refactor eslint file

--- a/eslint.config
+++ b/eslint.config
@@ -15,7 +15,7 @@
     "no-console": "off",
   },
   "globals": {
-    "document": false
-    "window": true
+    "document": false,
+    "window": true,
   }
 }
